// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoodSphere matches snapshot for sunny mood 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "height": 384,
          "width": 384,
        },
        {},
      ]
    }
  >
    <Mock
      height={384}
      viewBox="0 0 384 384"
      width={384}
    >
      <Mock>
        <Mock
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          id="moodGlow-sunny"
          rx="50%"
          ry="50%"
        >
          <Mock
            offset="0%"
            stopColor="#d97706"
            stopOpacity="0"
          />
          <Mock
            offset="48%"
            stopColor="#d97706"
            stopOpacity="0"
          />
          <Mock
            offset="50%"
            stopColor="#d97706"
            stopOpacity="0.4"
          />
          <Mock
            offset="65%"
            stopColor="#d97706"
            stopOpacity="0.25"
          />
          <Mock
            offset="80%"
            stopColor="#d97706"
            stopOpacity="0.1"
          />
          <Mock
            offset="100%"
            stopColor="#d97706"
            stopOpacity="0"
          />
        </Mock>
        <Mock
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          id="moodGlow-empty"
          rx="50%"
          ry="50%"
        >
          <Mock
            offset="40%"
            stopColor="#FFFFFF"
            stopOpacity="0"
          />
          <Mock
            offset="60%"
            stopColor="#FFFFFF"
            stopOpacity="0.18"
          />
          <Mock
            offset="80%"
            stopColor="#FFFFFF"
            stopOpacity="0.08"
          />
          <Mock
            offset="100%"
            stopColor="#FFFFFF"
            stopOpacity="0"
          />
        </Mock>
        <Mock
          cx="30%"
          cy="30%"
          fx="30%"
          fy="30%"
          id="moodSphere-sunny"
          r="70%"
        >
          <Mock
            offset="0%"
            stopColor="#fbbf24"
            stopOpacity="1"
          />
          <Mock
            offset="50%"
            stopColor="#f59e0b"
            stopOpacity="1"
          />
          <Mock
            offset="100%"
            stopColor="#d97706"
            stopOpacity="1"
          />
        </Mock>
        <Mock
          cx="30%"
          cy="30%"
          fx="30%"
          fy="30%"
          id="moodSphere-empty"
          r="70%"
        >
          <Mock
            offset="0%"
            stopColor="#FFFFFF"
            stopOpacity="0.48"
          />
          <Mock
            offset="45%"
            stopColor="#FFFFFF"
            stopOpacity="0.30"
          />
          <Mock
            offset="80%"
            stopColor="#FFFFFF"
            stopOpacity="0.18"
          />
          <Mock
            offset="100%"
            stopColor="#FFFFFF"
            stopOpacity="0.08"
          />
        </Mock>
      </Mock>
      <Mock
        animatedProps={{}}
        cx={192}
        cy={192}
        fill="url(#moodGlow-sunny)"
        r={192}
      />
      <Mock
        cx={192}
        cy={192}
        fill="url(#moodSphere-sunny)"
        opacity={1}
        r={96}
      />
    </Mock>
  </View>
</View>
`;

exports[`MoodSphere matches snapshot when empty 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "height": 384,
          "width": 384,
        },
        {},
      ]
    }
  >
    <Mock
      height={384}
      viewBox="0 0 384 384"
      width={384}
    >
      <Mock>
        <Mock
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          id="moodGlow-sunny"
          rx="50%"
          ry="50%"
        >
          <Mock
            offset="0%"
            stopColor="#d97706"
            stopOpacity="0"
          />
          <Mock
            offset="48%"
            stopColor="#d97706"
            stopOpacity="0"
          />
          <Mock
            offset="50%"
            stopColor="#d97706"
            stopOpacity="0.4"
          />
          <Mock
            offset="65%"
            stopColor="#d97706"
            stopOpacity="0.25"
          />
          <Mock
            offset="80%"
            stopColor="#d97706"
            stopOpacity="0.1"
          />
          <Mock
            offset="100%"
            stopColor="#d97706"
            stopOpacity="0"
          />
        </Mock>
        <Mock
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          id="moodGlow-empty"
          rx="50%"
          ry="50%"
        >
          <Mock
            offset="40%"
            stopColor="#FFFFFF"
            stopOpacity="0"
          />
          <Mock
            offset="60%"
            stopColor="#FFFFFF"
            stopOpacity="0.18"
          />
          <Mock
            offset="80%"
            stopColor="#FFFFFF"
            stopOpacity="0.08"
          />
          <Mock
            offset="100%"
            stopColor="#FFFFFF"
            stopOpacity="0"
          />
        </Mock>
        <Mock
          cx="30%"
          cy="30%"
          fx="30%"
          fy="30%"
          id="moodSphere-sunny"
          r="70%"
        >
          <Mock
            offset="0%"
            stopColor="#fbbf24"
            stopOpacity="1"
          />
          <Mock
            offset="50%"
            stopColor="#f59e0b"
            stopOpacity="1"
          />
          <Mock
            offset="100%"
            stopColor="#d97706"
            stopOpacity="1"
          />
        </Mock>
        <Mock
          cx="30%"
          cy="30%"
          fx="30%"
          fy="30%"
          id="moodSphere-empty"
          r="70%"
        >
          <Mock
            offset="0%"
            stopColor="#FFFFFF"
            stopOpacity="0.48"
          />
          <Mock
            offset="45%"
            stopColor="#FFFFFF"
            stopOpacity="0.30"
          />
          <Mock
            offset="80%"
            stopColor="#FFFFFF"
            stopOpacity="0.18"
          />
          <Mock
            offset="100%"
            stopColor="#FFFFFF"
            stopOpacity="0.08"
          />
        </Mock>
      </Mock>
      <Mock
        animatedProps={{}}
        cx={192}
        cy={192}
        fill="url(#moodGlow-empty)"
        r={192}
      />
      <Mock
        cx={192}
        cy={192}
        fill="url(#moodSphere-empty)"
        r={96}
      />
      <Mock
        cx={192}
        cy={192}
        fill="transparent"
        r={96}
        stroke="rgba(255, 255, 255, 0.6)"
        strokeWidth={2}
      />
    </Mock>
  </View>
</View>
`;
